--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         jcenter()
         maven {
             url uri('/Users/xm_ywx/MethodTrace/repo')
+            maven { url "https://plugins.gradle.org/m2/" }
         }
     }
     dependencies {
@@ -22,6 +23,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
 }
 
