--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,13 @@ buildscript {
         jcenter()
         maven {
             url uri('/Users/xm_ywx/MethodTrace/repo')
-            maven { url "https://plugins.gradle.org/m2/" }
         }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.wx.methodtrace:method-trace:1.0.0.0-test'
+        classpath 'com.wx.methodtrace:method-trace:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
